syntax = "proto3";

package rs.ac.uns.ftn.grpc;
import "Grpc/Protos/model.proto";
service BookFlightGrpcService {
  rpc bookFlight (BookFlightMessageProto) returns (BookFlightMessageProtoResponse);
}